Fixed proper alignments and justifys in index and contact pages and removed some unnecessary code

--- a/Lv1-Final-Project/resources/css/commons.css
+++ b/Lv1-Final-Project/resources/css/commons.css
@@ -15,7 +15,7 @@ header {
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
   padding: 30px;
   width: 100%;
-  height: 10vh;
+  /* height: 10vh; */
   align-items: center;
   justify-content: space-around;
   justify-self: center;
@@ -29,17 +29,9 @@ nav {
   /* border: red solid 5px; */
 }
 
-nav li {
-  /* Spacing between nav items */
-  padding-left: 2.5rem;
-}
-
 nav a {
   color: white;
-}
-
-nav a:visited {
-  color: grey;
+  text-decoration: none;
 }
 
 nav a:hover {
@@ -47,7 +39,7 @@ nav a:hover {
 }
 
 nav a:active {
-  color: white;
+  color: purple;
 }
 
 footer {
@@ -60,5 +52,5 @@ footer {
   text-align: center;
   background-color: rgba(0, 0, 0, 1);
   padding: 15px;
-  height: 5vh;
+  /* height: 5vh; */
 }
